# Pytest-Error-Fixing-Framework

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  DDD-for-pytest-fixer-Concepts-and-Implementation-Guide.md  LICENSE  README.md  Repository-Structure-and-Architecture-Design-Proposal.md  Taskfile.yml  hypot_test_gen.py  index.html  mkdocs.yml  project-documentation.md  pyproject.toml  pytest-fixer-User-&-Developer-Guide.md  pytest.ini  raw-project-documentation.md  reorganize_tests.sh  requirements.txt  setup.py
.github/workflows/: ci.yml  deploy.yml  docstr-coverage.yml  pycoverage.yml
.taskmaster/docs/: prd.txt
DDD-for-pytest-fixer-Concepts-and-Implementation-Guide/: index.html
Pytest-Fixer-TDD-Blueprint/: index.html
audits/: AUDIT_DEC_17.md  AUDIT_DEC_18.md  QUALITY_AUDIT.md
config/: defaults.py
docs/: DDD-for-pytest-fixer-Concepts-and-Implementation-Guide.md  Pytest-Fixer-TDD-Blueprint.md  Structured-Test-Development-Process.md  Test Generation System.md  aiv-packet-pr9.yaml  d.md  doc-issues.md  future-expansion.md  generate_pytest.md  hypothesis.md  index.md  new-features.md  pytest-branch-fixer-refactoring.md  test_gen_prompt.md
scripts/: analyze_code.sh  hypot_test_gen.py  import_update_report.txt  reorganize_project.py  runner_debug.py  setup_project.sh  test_failure_parser_compare.py  test_failure_parser_debug.py  test_fix_workflow.py  update_imports.py
site/: index.html  search.html
tests/: conftest.py  temp_failing_test.py  test_click.py  test_fix_workflow.py  test_git_repository.py  test_math_fix.py  test_math_operations.py
(+182 files in other folders)
