[project]
name = "pytest-fixer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "click>=8.1.7",
    "gitpython>=3.1.43",
    "marvin>=2.3.8",
    "pytest>=8.3.4",
    "snoop>=0.6.0",
    "litellm>=1.55.8",
    "tinydb>=4.8.2",
    "iniconfig>=2.0.0",
    "pluggy>=1.5.0",
    "openai>=1.58.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-awesome-pages-plugin",
    "pymarkdownlnt",

    "pytest-cov",
    "pytest-asyncio",
    "hypothesis",
]
